<resources>
    <string name="app_name" translatable="false">Kozlovski First Application</string>
    <string name="action_settings">Settings</string>
    <string name="kozlovski_vladislav">Kozlovski Vladislav</string>
    <string name="myphoto" translatable="false">My Photo</string>
    <string name="github_kvlad81" translatable="false">GitHub: KVlad81</string>
    <string name="kozlovski_first_application" translatable="false">Kozlovski First Application</string>
    <string name="welcome_to_my_application">Welcome to my application</string>
    <string name="firstpageimage" translatable="false">First Page Image</string>
    <string name="application_description">This is my first application</string>
    <string name="secondpageimage" translatable="false">second Page Image</string>
    <string name="secondpagehorizontalimage" translatable="false">second Page Horizontal Image</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="_4_n_6">Portrait: 4 icons in a  row \nLandscape: 6 icons in a row</string>
    <string name="standard">Standard layout</string>
    <string name="plot">Dense layout</string>
    <string name="_5_n_7">Portrait: 5 icons in a row\nLandscape: 7 icons in a row</string>
    <string name="my_application_image" translatable="false">My application image</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="next">Next</string>
    <string name="color">Color</string>
    <string name="you_didn_t_change_text" translatable="false">You didn\'t change text</string>
    <string name="this_is_description_text" translatable="false">This is description text</string>
    <string name="launcher_activity" translatable="false">Launcher activity</string>
    <string name="list_activity" translatable="false">List activity</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="Density">Density</string>
    <string name="Theme">Theme</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="really_delete">Do you really want to delete this item?</string>
    <string name="deleted_item">Deleted item at position</string>
    <string name="snackbar_at_position" translatable="false">Snackbar at position</string>
    <string name="via_click" translatable="false">was dismissed via an action click.</string>
    <string name="new_snackbar" translatable="false">was from a new Snackbar being shown.</string>
    <string name="dismiss" translatable="false">was dismissed via a call to dismiss().</string>
    <string name="via_swipe" translatable="false">was dismissed via a swipe.</string>
    <string name="via_timeout" translatable="false">was dismissed via a timeout.</string>
    <string name="was_shown" translatable="false">was shown.</string>
    <string name="inserted_at_start" translatable="false">Inserted new element at start.</string>
    <string name="launcher_view_activity" translatable="false">LauncherViewActivity</string>
    <string name="linear_layout_activity" translatable="false">LinearLayoutActivity</string>
    <string name="linear_adapter" translatable="false">LinearAdapter</string>
    <string name="launcher_adapter" translatable="false">LauncherAdapter</string>
    <string name="yes">YES</string>
</resources>
