<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/firstPageImageWidth"
        android:layout_height="@dimen/firstPageImageHeight"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/oooo"
        android:contentDescription="@string/myphoto" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/basic_mergin"
        android:text="@string/kozlovski_first_application"
        android:textSize="@dimen/application_name_size" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView5"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="@dimen/basic_mergin"
    android:text="@string/welcome_to_my_application"
    android:textSize="@dimen/hello_size" />
</RelativeLayout>